# insert_services

./: .gitignore  Makefile  README.md  adding_functional_objects.py  database_properties.py  gui_basics.py  gui_insert_services.py  gui_main.py  gui_manipulate_cities.py  gui_update_services.py  insert_services_gui.py  pyproject.toml  requirements.txt
db_schema/: .gitignore  get_db_data.py  init_data.sql  init_schema.sql
platform_management/: __init__.py  __main__.py  database_properties.py  dto.py  version.py
platform_management/cli/: __init__.py  adm_division.py  blocks.py  buildings.py  common.py  defaults.py  files.py  insert_services.py  mappings.py  operations.py  run_cli.py  services.py
platform_management/db/: __init__.py
platform_management/db/operations/: __init__.py  deletion.py
platform_management/db_schema/: get_db_data.py  init_data.sql  init_schema.sql
platform_management/gui/: __init__.py  app.py  basics.py  init_window.py  insert_services.py  manipulate_cities.py  manipulate_regions.py  run.py  update_services.py
platform_management/gui/insert_services/: __init__.py  defaults.py  insert_services.py  logging.py
platform_management/gui/manipulate_cities/: __init__.py  cities_table.py  city_creation.py  logging.py  manipulate_cities.py  territories_table.py  territory_creation.py  territory_window.py
platform_management/gui/manipulate_regions/: __init__.py  logging.py  manipulate_regions.py  (+2 more)
platform_management/main/: __init__.py  gui.py  insert_adms_cli.py  insert_blocks_cli.py  insert_buildings_cli.py  insert_services_cli.py  main_group.py  operations.py
platform_management/utils/: __init__.py  converters.py  dotenv.py
testing/: docker-compose.yml  fill_database.py  pyproject.toml
testing/test_city/: .gitignore  administrative_units.geojson  buildings.geojson  city.geojson  municipalities.geojson  test_city.qgz
(+13 files in other folders)
